; ModuleID = '/home/carl/AnghaBench/mpv/video/extr_img_format.c_mp_find_regular_imgfmt.c'
source_filename = "/home/carl/AnghaBench/mpv/video/extr_img_format.c_mp_find_regular_imgfmt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_regular_imgfmt = type { i32 }

@IMGFMT_START = common dso_local global i32 0, align 4
@IMGFMT_END = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mp_find_regular_imgfmt(%struct.mp_regular_imgfmt* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.mp_regular_imgfmt*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.mp_regular_imgfmt, align 4
  store %struct.mp_regular_imgfmt* %0, %struct.mp_regular_imgfmt** %3, align 8
  %6 = load i32, i32* @IMGFMT_START, align 4
  %7 = add nsw i32 %6, 1
  store i32 %7, i32* %4, align 4
  br label %8

8:                                                ; preds = %23, %1
  %9 = load i32, i32* %4, align 4
  %10 = load i32, i32* @IMGFMT_END, align 4
  %11 = icmp slt i32 %9, %10
  br i1 %11, label %12, label %26

12:                                               ; preds = %8
  %13 = load i32, i32* %4, align 4
  %14 = call i64 @mp_get_regular_imgfmt(%struct.mp_regular_imgfmt* %5, i32 %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %22

16:                                               ; preds = %12
  %17 = load %struct.mp_regular_imgfmt*, %struct.mp_regular_imgfmt** %3, align 8
  %18 = call i64 @regular_imgfmt_equals(%struct.mp_regular_imgfmt* %17, %struct.mp_regular_imgfmt* %5)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %16
  %21 = load i32, i32* %4, align 4
  store i32 %21, i32* %2, align 4
  br label %27

22:                                               ; preds = %16, %12
  br label %23

23:                                               ; preds = %22
  %24 = load i32, i32* %4, align 4
  %25 = add nsw i32 %24, 1
  store i32 %25, i32* %4, align 4
  br label %8

26:                                               ; preds = %8
  store i32 0, i32* %2, align 4
  br label %27

27:                                               ; preds = %26, %20
  %28 = load i32, i32* %2, align 4
  ret i32 %28
}

declare dso_local i64 @mp_get_regular_imgfmt(%struct.mp_regular_imgfmt*, i32) #1

declare dso_local i64 @regular_imgfmt_equals(%struct.mp_regular_imgfmt*, %struct.mp_regular_imgfmt*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
